name:               aeson-jsonpath
version:            0.3.0.2
synopsis:           Parse and run JSONPath queries on Aeson documents
description:        RFC 9535 compliant JSONPath parsing and querying
                    package. JSONPath is similar to XPath for querying
                    XML documents.
license:            MIT
license-file:       LICENSE
author:             Taimoor Zaeem
maintainer:         Taimoor Zaeem <mtaimoorzaeem@gmail.com>
category:           JSON, Text, Web
homepage:           https://github.com/taimoorzaeem/aeson-jsonpath
bug-reports:        https://github.com/taimoorzaeem/aeson-jsonpath/issues
build-type:         Simple
extra-source-files: CHANGELOG.md
extra-doc-files:    README.md
data-files:         jsonpath-compliance-test-suite/cts.json
cabal-version:      1.18

tested-with:
    GHC == 9.4.8
  , GHC == 9.6.6
  , GHC == 9.8.4
  , GHC == 9.10.1
  , GHC == 9.12.2

source-repository head
  type: git
  location: https://github.com/taimoorzaeem/aeson-jsonpath

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
                      QuasiQuotes
  hs-source-dirs:     src
  exposed-modules:    Data.Aeson.JSONPath
                      Data.Aeson.JSONPath.Parser
                      Data.Aeson.JSONPath.Query
                      Data.Aeson.JSONPath.Types
  other-modules:      Data.Aeson.JSONPath.Parser.Query
                      Data.Aeson.JSONPath.Parser.Filter
                      Data.Aeson.JSONPath.Parser.Name
                      Data.Aeson.JSONPath.Parser.Number
                      Data.Aeson.JSONPath.Parser.Common
                      Data.Aeson.JSONPath.Query.Query
                      Data.Aeson.JSONPath.Query.Segment
                      Data.Aeson.JSONPath.Query.Selector
                      Data.Aeson.JSONPath.Query.Filter
                      Data.Aeson.JSONPath.Types.Query
                      Data.Aeson.JSONPath.Types.Segment
                      Data.Aeson.JSONPath.Types.Selector
                      Data.Aeson.JSONPath.Types.Filter
  build-depends:      aeson                     >= 2.0.3 && < 2.3
                    , base                      >= 4.9 && < 4.23
                    , parsec                    >= 3.1.11 && < 3.2
                    , scientific                >= 0.3.4 && < 0.4
                    , template-haskell >=2.12 && <2.25
                    , text                      >= 1.2.2 && < 2.2
                    , vector                    >= 0.11 && < 0.14

  ghc-options:        -Werror -Wall -Wunused-packages

test-suite spec
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
                      QuasiQuotes
  hs-source-dirs:     test/spec
  main-is:            Main.hs
  other-modules:      ParserSpec
                      QuerySpec
                      LocatedSpec
  build-depends:      aeson                     >= 2.0.3 && < 2.3
                    , aeson-jsonpath
                    , base                      >= 4.9 && < 4.23
                    , hspec                     >= 2.3 && < 2.12
                    , parsec                    >= 3.1.11 && < 3.2
                    , vector                    >= 0.11 && < 0.14

  ghc-options:        -Werror -Wall -Wunused-packages

test-suite compliance
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                      NoImplicitPrelude
                      QuasiQuotes
  hs-source-dirs:     test/compliance
  main-is:            Main.hs
  other-modules:      ComplianceSpec
                      Paths_aeson_jsonpath
  build-depends:      aeson                     >= 2.0.3 && < 2.3
                    , aeson-jsonpath
                    , base                      >= 4.9 && < 4.23
                    , hspec                     >= 2.3 && < 2.12
                    , parsec                    >= 3.1.11 && < 3.2
                    , text                      >= 1.2.2 && < 2.2
                    , vector                    >= 0.11 && < 0.14

  ghc-options:        -Werror -Wall -Wunused-packages
